<menu xmlns:android="http://schemas.android.com/apk/res/android">
    
    <item android:id="@+id/menuitem1"
        android:title="@string/menu1"
        android:showAsAction="never" />
    
     <item
        android:id="@+id/menuitem2"
        android:showAsAction="never"
        android:title="@string/menu2">
     </item>
     
     <item
        android:id="@+id/menuitem3"
        android:showAsAction="never"
        android:title="@string/menu3">
     </item>
     
     <item
        android:id="@+id/menuitem4"
        android:showAsAction="never"
        android:title="@string/menu4">
     </item>
     
     <item
        android:id="@+id/menuitem5"
        android:showAsAction="never"
        android:title="@string/menu5">
     </item>
     
     <item
        android:id="@+id/menuitem10"
        android:showAsAction="never"
        android:title="@string/menu10">
     </item>
</menu>
